@@ -1,3 +1,4 @@
+  Remove dirname function (replaced with stdlib)
   Add puppet 3.4 to travis
 20140113 - v0.4.0
   Remove setting the root device params
